# SHINE

./: .all-contributorsrc  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  REVIEW_CHANGES.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
configs/: cosmodc2_scene.yaml  euclid_vis.yaml  test_run.yaml
configs/validation/: level0_base.yaml  level0_test.yaml  level1_base.yaml  level1_test.yaml
data/EUC_VIS_SWL/: README.md  prepare_quadrant_data.py
doc/: distributed_inference.md  lensmc_comparison.md  survey_scale_architecture.md
docs/: architecture.md  configuration.md  getting-started.md  index.md
docs/api/: config.md  data.md  galaxy_utils.md  inference.md  prior_utils.md  psf_utils.md  scene.md
docs/api/validation/: bias_config.md  cli.md  extraction.md  index.md  plots.md  simulation.md  statistics.md
docs/design/: flagship2.md
docs/validation/: batched.md  index.md  level0.md  level1.md
examples/: level0_batched_inference.ipynb  shear_inference.py
scripts/: README.md  benchmark_inference.py  plot_shine_results.py  test_map.py
shine/: __init__.py  config.py  data.py  galaxy_utils.py  inference.py  main.py  plot_shine_results.py  prior_utils.py  psf_utils.py  scene.py
shine/catalogs/: __init__.py  base.py  utils.py
shine/catalogs/loaders/: __init__.py  cosmodc2.py
shine/euclid/: __init__.py  config.py  data_loader.py  plots.py  scene.py
shine/validation/: __init__.py  bias_config.py  cli.py  extraction.py  plots.py  simulation.py  statistics.py
tests/: __init__.py  test_catalog_integration.py  test_catalogs.py  test_config.py  test_data.py  test_galaxy_utils.py  test_prior_utils.py  test_psf_utils.py
tests/test_euclid/: conftest.py  test_data_loader.py  test_integration.py  test_scene.py
tests/test_validation/: test_batched_inference.py  test_bias_config.py  test_extraction.py  test_level0_batched_integration.py  test_level0_integration.py  test_level1_integration.py  test_simulation.py  test_statistics.py
