[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shine"
dynamic = ["version"]
description = "A JAX-powered framework for probabilistic shear estimation in weak gravitational lensing"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Emma Ayçoberry", email = "emma.aycoberry@cea.fr"},
    {name = "Ezequiel Centofanti", email = "ezequiel.centofanti@cea.fr"},
    {name = "Sam Farrens", email ="sam.farrens@cea.fr"},
    {name = "Francois Lanusse", email = "francois.lanusse@cnrs.fr"}
]
license = "MIT"
keywords = ["cosmology", "weak-lensing", "shear", "jax", "astronomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.setuptools]
packages = ["shine"]

[tool.setuptools_scm]
write_to = "shine/_version.py"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
